--- a/css/main.css
+++ b/css/main.css
@@ -20,14 +20,6 @@ body {
   margin: 0;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
 .site-nav__link,
 .main-nav__logo,
 .site-nav-contact__link,
@@ -41,11 +33,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 ul,
@@ -758,58 +745,61 @@ input:active + .modal-contact__icon {
   margin-left: 10px;
 }
 
-.advantage {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  margin: 0;
-  margin-left: -30px;
-  margin-top: -30px;
+@media screen and (max-width: 768px) {
+  .adv {
+    min-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 3px solid red;
+    display: block;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .advantage {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: block;
+  }
+  .advantage__item {
+    display: block;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+  .thumb__advantage {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 120px;
+    max-width: 100%;
+    background-color: #f5f4fa;
+  }
+  .thumb__title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
-.advantage__item {
-  display: block;
-  width: 270px;
-  margin-right: 30px;
-}
-.advantage__item:nth-child(4n) {
-  margin-right: 0;
-}
-
-.thumb {
-  display: block;
-  border-radius: 4px;
-  width: 270px;
-  margin-left: 30px;
-  margin-top: 30px;
-}
-.thumb__advantage {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 270px;
-  height: 120px;
-  background-color: #f5f4fa;
-  margin-bottom: 30px;
-}
-.thumb__picture {
-  margin: auto;
-}
-.thumb__title {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #212121;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-}
-.thumb__paragraph {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 14px;
-  line-height: 1.71;
-}
-
 .customers {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -925,6 +915,11 @@ input:active + .modal-contact__icon {
   line-height: 1.14;
 }
 
+@media (max-width: 1200px) {
+  .main-headline {
+    display: none;
+  }
+}
 .network {
   display: -webkit-box;
   display: -ms-flexbox;
