--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,46 +1,183 @@
-.advantage {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  margin-left: calc(-1 * $item-work-gap);
-  margin-top: calc(-1 * $item-work-gap);
-  &__item {
+
+
+
+@media screen and (max-width: $tablet) {
+
+  .adv {
+    min-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+
+
+    outline: 3px solid red;
     display: block;
-    width: 270px;
-    margin-right: $item-work-gap;
+padding-top: 60px;
+padding-bottom: 60px;
+// padding-left: 15px;
+// padding-right: 15px;
   }
-  &__item:nth-child(4n) {
-    margin-right: 0;
-  }
-}
-.thumb {
+.advantage {
+  align-items: center;
+  justify-content: center;
   display: block;
-  border-radius: 4px;
-  width: 270px;
-  margin-left: $item-work-gap;
-  margin-top: $item-work-gap;
-  &__advantage {
-    display: flex;
-    width: 270px;
-    height: 120px;
-    background-color: $bg-color;
-    margin-bottom: $item-work-gap;
+  // width: 100%;
+
   }
-  &__picture {
-    margin: auto;
+  .advantage__item {
+display: block;
+align-items: center;
+justify-content: center;
+// max-width: 450px;
+margin-bottom : $item-work-gap;
   }
-  &__title {
-    margin-top: 0;
-    margin-bottom: 10px;
-    color: $title-color;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-  }
-  &__paragraph {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 1.71;
-  }
+
+
+.thumb__advantage {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 120px;
+  max-width: 100%;
+  background-color: $bg-color;
+  
 }
+
+.thumb__title {
+  display: flex;
+  align-items: center;
+  justify-content: center;}
+
+ }
+
+
+
+
+
+
+// .advantage {
+//   display: block;
+//   align-items: center;
+//   justify-content: center;
+  // display: flex;
+  // padding: 15px;
+  // margin: 15px;
+  // // margin-left: calc(-1 * $item-work-gap);
+  // // margin-top: calc(-1 * $item-work-gap);
+  // &__item {
+  //   display: block;
+  //   align-items: center;
+  //   justify-content: center;
+  //   width: 100%
+    // margin-right: $item-work-gap;
+//   }
+//   // &__item:nth-child(4n) {
+//   //   margin-right: 0;
+//   // }
+// }
+// .thumb {
+//   display: block;
+//   border-radius: 4px;
+//   width: 100%
+//   // margin-left: $item-work-gap;
+//   // margin-top: $item-work-gap;
+//   &__advantage {
+//     // display: flex;
+//     width: 100%;
+//     height: 120px;
+//     background-color: $bg-color;
+//     // margin-bottom: $item-work-gap;
+//   }
+//   &__picture {
+//     margin: auto;
+//   }
+//   &__title {
+//     // margin-top: 0;
+//     // margin-bottom: 10px;
+//     color: $title-color;
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 1.14;
+//   }
+//   &__paragraph {
+//     // margin-top: 0;
+//     // margin-bottom: 0;
+//     font-size: 14px;
+//     line-height: 1.71;
+//   }
+// }
+
+
+
+
+// @media (max-width: $tablet) {
+  
+//   .advantage {
+//   display: block;
+  
+//         }
+//   .thumb__advantage {
+//           width: 450px;
+//           height: 120px;
+//         }
+//   }
+//   .thumb {
+//      width: 450px;
+//   }
+
+ 
+
+
+
+
+
+
+
+
+// .advantage {
+//   display: flex;
+//   padding: 0;
+//   margin: 0;
+//   margin-left: calc(-1 * $item-work-gap);
+//   margin-top: calc(-1 * $item-work-gap);
+//   &__item {
+//     display: block;
+//     width: 270px;
+//     margin-right: $item-work-gap;
+//   }
+//   &__item:nth-child(4n) {
+//     margin-right: 0;
+//   }
+// }
+// .thumb {
+//   display: block;
+//   border-radius: 4px;
+//   width: 270px;
+//   margin-left: $item-work-gap;
+//   margin-top: $item-work-gap;
+//   &__advantage {
+//     display: flex;
+//     width: 270px;
+//     height: 120px;
+//     background-color: $bg-color;
+//     margin-bottom: $item-work-gap;
+//   }
+//   &__picture {
+//     margin: auto;
+//   }
+//   &__title {
+//     margin-top: 0;
+//     margin-bottom: 10px;
+//     color: $title-color;
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 1.14;
+//   }
+//   &__paragraph {
+//     margin-top: 0;
+//     margin-bottom: 0;
+//     font-size: 14px;
+//     line-height: 1.71;
+//   }
+// }
+
+
