--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -6,14 +6,22 @@ body {
   border: 0;
   margin: 0;
 }
+// @media (min-width: 480px) {
+//   body {
+//     background-color: red;
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
+//   }
+  
+// }
+
+// .container {
+//   margin-left: auto;
+//   margin-right: auto;
+//   // -------------------------// width: 1200px;-------------------
+//   // padding-left: 15px;
+//   // padding-right: 15px;
+//   }
+
 .site-nav__link,
 .main-nav__logo,
 .site-nav-contact__link,
@@ -29,10 +37,10 @@ img {
   height: auto;
 }
 
-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
+// section {
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+// }
 ul,
 p,
 h2 {
