--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,74 +1,108 @@
+.adv {  
+       margin-left: auto;
+  margin-right: auto;
+  @media screen and (max-width: $tablet) {
+    max-width: 767px; 
+    }
+    @media screen and (max-width: $desktop) {
+      max-width: 1150px; 
+      }   
+    }
 
-
-
-@media screen and (max-width: $tablet) {
-
-  .adv {
-    min-width: 320px;
-    margin-left: auto;
-    margin-right: auto;
-
-
-    outline: 3px solid red;
-    display: block;
-padding-top: 60px;
-padding-bottom: 60px;
-// padding-left: 15px;
-// padding-right: 15px;
-  }
 .advantage {
+  margin: -15px;
+justify-content: center;
+
+@media screen and (min-width: $tablet ) and (max-width: $desktop) {
+margin-bottom: 0;
+}
+&__item {
+    display: block;
   align-items: center;
   justify-content: center;
-  display: block;
-  // width: 100%;
-
+  max-width: 450px;
+  margin-bottom: $item-work-gap;
+margin-left: auto;
+ margin-right: auto;
   }
-  .advantage__item {
-display: block;
-align-items: center;
-justify-content: center;
-// max-width: 450px;
-margin-bottom : $item-work-gap;
-  }
+  &__item:nth-child(4n) {
+       margin-bottom: 0;
+    }
 
+
+}
 
 .thumb__advantage {
+    border-radius: 4px;
   align-items: center;
   display: flex;
   justify-content: center;
   height: 120px;
-  max-width: 100%;
   background-color: $bg-color;
+  margin-bottom: $item-work-gap;
+  }
   
-}
 
 .thumb__title {
   display: flex;
   align-items: center;
-  justify-content: center;}
+  justify-content: center;
+margin-top: 0;
+  margin-bottom: 10px;
+    color: $title-color;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+  }
 
+  .thumb__paragraph {
+        font-size: 14px;
+    line-height: 1.71;
+     }
+
+  @media screen and (min-width: $tablet ) and (max-width: $desktop) {
+        .advantage {
+           display: flex;
+      flex-wrap: wrap;
+          align-items: center;  
+    }
+    .advantage__item {
+    max-width: 354px;
+    margin: 15px;
+    margin-bottom: 0;
+    
+            }
+      }
+ 
+      @media screen and (min-width: $desktop) {
+         .advantage {
+         display: flex;
+}
+
+.advantage__item {
+  align-items: center;
+  justify-content: center;
+  max-width: 270px;
+  margin: 15px;
+  width: calc((100% - 4 * 30px) / 4);
+
+}
  }
-
-
-
-
-
-
 // .advantage {
 //   display: block;
 //   align-items: center;
 //   justify-content: center;
-  // display: flex;
-  // padding: 15px;
-  // margin: 15px;
-  // // margin-left: calc(-1 * $item-work-gap);
-  // // margin-top: calc(-1 * $item-work-gap);
-  // &__item {
-  //   display: block;
-  //   align-items: center;
-  //   justify-content: center;
-  //   width: 100%
-    // margin-right: $item-work-gap;
+// display: flex;
+// padding: 15px;
+// margin: 15px;
+// // margin-left: calc(-1 * $item-work-gap);
+// // margin-top: calc(-1 * $item-work-gap);
+// &__item {
+//   display: block;
+//   align-items: center;
+//   justify-content: center;
+//   width: 100%
+// margin-right: $item-work-gap;
 //   }
 //   // &__item:nth-child(4n) {
 //   //   margin-right: 0;
@@ -105,34 +139,6 @@ margin-bottom : $item-work-gap;
 //     line-height: 1.71;
 //   }
 // }
-
-
-
-
-// @media (max-width: $tablet) {
-  
-//   .advantage {
-//   display: block;
-  
-//         }
-//   .thumb__advantage {
-//           width: 450px;
-//           height: 120px;
-//         }
-//   }
-//   .thumb {
-//      width: 450px;
-//   }
-
- 
-
-
-
-
-
-
-
-
 // .advantage {
 //   display: flex;
 //   padding: 0;
@@ -178,6 +184,3 @@ margin-bottom : $item-work-gap;
 //     font-size: 14px;
 //     line-height: 1.71;
 //   }
-// }
-
-
