--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -6,21 +6,29 @@ body {
   border: 0;
   margin: 0;
 }
-// @media (min-width: 480px) {
-//   body {
-//     background-color: red;
 
-//   }
-  
-// }
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 
-// .container {
+// .container 
+
+
 //   margin-left: auto;
 //   margin-right: auto;
 //   // -------------------------// width: 1200px;-------------------
 //   // padding-left: 15px;
 //   // padding-right: 15px;
-//   }
+
 
 .site-nav__link,
 .main-nav__logo,
@@ -31,16 +39,28 @@ body {
   text-decoration: none;
   @extend %transition;
 }
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
+.container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+section {
+  
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: $desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
-// section {
-//   padding-top: 94px;
-//   padding-bottom: 94px;
-// }
 ul,
 p,
 h2 {
@@ -48,6 +68,7 @@ h2 {
   margin: 0;
   list-style: none;
 }
+
 .main-headline {
   padding-top: 0;
 }
