--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,19 +1,26 @@
 .footer {
-  margin-left: auto;
-  margin-right: auto;
+  display: block;
+  text-align: center;
   background-color: $background-color-hero;
-  padding: 60px 0;
 }
 .footer-network {
+  display: block;
+  margin-top: 20px;
+  // margin-bottom: 60px;
+  justify-content: center;
   display: flex;
   &__img {
     fill: $hero-color;
-    display: flex;
-    margin: auto;
   }
+
+  &__item {
+    max-width: 44px;
+  }
+
   &__item:not(:last-child) {
     margin-right: 10px;
   }
+
   &__logo {
     @include networklogo();
     &:hover,
@@ -23,9 +30,16 @@
     }
   }
 }
+@media screen and (min-width: $tablet) and (max-width: $desktop) {
+  .cont-footer {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+  }
+}
 
 .join {
-  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.63;
@@ -40,16 +54,17 @@
   color: $accent-color;
 }
 .address {
-  margin-right: 70px;
-  margin-top: 20px;
+  //   margin-right: 70px;
+  //   margin-top: 20px;
   font-style: normal;
+  margin-top: 20px;
 
   &__email {
-    display: inline-block;
+    //     display: inline-block;
     color: $footer-color;
     font-size: 14px;
     line-height: 1.71;
-    margin-bottom: 9px;
+    // margin-bottom: 8px;
     border: 0;
     cursor: pointer;
     @extend %transition;
@@ -59,7 +74,7 @@
     font-size: 14px;
     line-height: 1.71;
     margin: 0;
-    margin-bottom: 9px;
+    // margin-bottom: 8px;
     display: inline-block;
     border: 0;
   }
@@ -74,60 +89,86 @@
   }
 }
 
-.foot-address {
-  display: flex;
-}
+// .addres { @media screen and (min-width: $tablet ) and (max-width: $desktop) {
+//         margin-left: 76px;}
+
+// }
+
+// .foot-address {
+//   display: flex;
+// }
 
 .foot-network {
-  padding-top: 12px;
-}
+  margin-top: 60px;
+  margin-bottom: 60px;
+  @media screen and (min-width: $tablet) and (max-width: $desktop) {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 165px;
+  }
+  .main-nav__logo {
+    @media screen and (min-width: $tablet) and (max-width: $desktop) {
+      margin-left: 115px;
+    }
+  }
+  .mail-sign {
+    margin-top: 60px;
+    @media screen and (min-width: $tablet) and (max-width: $desktop) {
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 60px;
+    }
+  }
+  .address__email:hover,
+  .address__email:focus,
+  .address__tel:hover,
+  .address__tel:focus {
+    color: $accent-color;
+  }
+  // .footer-sign {
+  //   display: flex;
+  //   flex-direction: column;
+  //   padding-top: 12px;
+  // }
 
-.address__email:hover,
-.address__email:focus,
-.address__tel:hover,
-.address__tel:focus {
-  color: $accent-color;
-}
-.footer-sign {
-  display: flex;
-  flex-direction: column;
-  padding-top: 12px;
-}
+  .footer-sign-sign {
+    display: block;
+    justify-content: center;
+  }
 
-.footer-sign-sign {
-  display: flex;
-  justify-content: center;
-}
+  .input-sign {
+    border: 1px solid transparent;
+    width: 358px;
+    height: 50px;
+    border-color: rgba(255, 255, 255, 0.1);
+    border-radius: 4px;
+    background-color: $background-color-hero;
+    //   padding-left: 16px;
+    display: flex;
+  }
 
-.input-sign {
-  border: 1px solid transparent;
-  width: 358px;
-  height: 50px;
-  border-color: rgba(255, 255, 255, 0.1);
-  border-radius: 4px;
-  background-color: $background-color-hero;
-  padding-left: 16px;
-  display: flex;
-}
-
-.button-sign {
-  width: 200px;
-  height: 50px;
-  margin-left: 12px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  color: $hero-color;
-  letter-spacing: 0.06em;
-  background-color: $active-color;
-  border-radius: 4px;
-  fill: $bg-color;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  cursor: pointer;
-  @extend %transition;
+  .button-sign {
+    display: flex;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30 / 16);
+    color: $hero-color;
+    letter-spacing: 0.06em;
+    background-color: $active-color;
+    border-radius: 4px;
+    fill: $bg-color;
+    border: none;
+    cursor: pointer;
+    @extend %transition;
+  }
   &:hover,
   &:focus,
   &:active {
@@ -138,4 +179,19 @@
   &__icon {
     margin-left: 10px;
   }
+}
+// .mail-sign {
+//     display: flex;
+//     margin-left: 93px;
+//   }
+
+.label-sign-footer {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.63;
+  color: $hero-color;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  margin-top: 60px;
 }
