--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -19,7 +19,35 @@ $font-weblogo: "Raleway";
 $phone: 480px;
 $tablet: 768px;
 $desktop: 1200px;
+
+@mixin dq($device) {
+  @if $device == "phone" {
+    @media screen and (min-width: $phone) {
+      @content;
+    }
+  } 
+  @if $device == "only-phone" {
+    @media screen and (max-width: #{$tablet - 0.02}) {
+      @content;
+    }
+  } 
+  @if $device == "only-tablet" {
+    @media screen and (max-width: #{$desktop - 0.02}) {
+      @content;
+    }
+  }
+
+  @if $device == "desktop" {
+    @media screen and (min-width: $desktop) {
+      @content;
+    }
+  } 
+}
+
+
 // -------------------------------------
+
+
 
 %transition {
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
