--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -32,7 +32,8 @@ $desktop: 1200px;
     }
   } 
   @if $device == "only-tablet" {
-    @media screen and (max-width: #{$desktop - 0.02}) {
+    @media screen and (min-width: $tablet) and (max-width: #{$desktop - 0.02})
+     {
       @content;
     }
   }
